@@ -1,324 +1,301 @@
 package cn.iocoder.yudao.module.system.service.dept;
 
 import cn.iocoder.yudao.framework.common.enums.CommonStatusEnum;
-import cn.iocoder.yudao.framework.common.util.object.ObjectUtils;
+import cn.iocoder.yudao.framework.common.util.collection.ArrayUtils;
 import cn.iocoder.yudao.framework.test.core.ut.BaseDbUnitTest;
 import cn.iocoder.yudao.module.system.controller.admin.dept.vo.dept.DeptListReqVO;
 import cn.iocoder.yudao.module.system.controller.admin.dept.vo.dept.DeptSaveReqVO;
 import cn.iocoder.yudao.module.system.dal.dataobject.dept.DeptDO;
 import cn.iocoder.yudao.module.system.dal.mysql.dept.DeptMapper;
 import org.junit.jupiter.api.Test;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ValueOperations;
 
 import javax.annotation.Resource;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Consumer;
 
+import static cn.iocoder.yudao.framework.common.util.object.ObjectUtils.cloneIgnoreId;
 import static cn.iocoder.yudao.framework.test.core.util.AssertUtils.assertPojoEquals;
 import static cn.iocoder.yudao.framework.test.core.util.AssertUtils.assertServiceException;
 import static cn.iocoder.yudao.framework.test.core.util.RandomUtils.*;
 import static cn.iocoder.yudao.module.system.enums.ErrorCodeConstants.*;
-import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
-/**
- * {@link DeptServiceImpl} 的单元测试类
- *
- * @author niudehua
- */
 @Import(DeptServiceImpl.class)
 public class DeptServiceImplTest extends BaseDbUnitTest {
 
     @Resource
     private DeptServiceImpl deptService;
+
     @Resource
     private DeptMapper deptMapper;
 
+    @MockBean
+    private RedisTemplate<String, Object> redisTemplate;
+
+    @MockBean
+    private ValueOperations<String, Object> valueOperations;
+
     @Test
-    public void testCreateDept() {
+    public void testCreateDept_success() {
         // 准备参数
-        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class, o -> {
-            o.setId(null); // 防止 id 被设置
-            o.setParentId(DeptDO.PARENT_ID_ROOT);
-            o.setStatus(randomCommonStatus());
-        });
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class,
+                o -> o.setStatus(randomEle(CommonStatusEnum.values()).getStatus()))
+                .setId(null);
+        // 如果设置了父部门，需要 mock 父部门存在
+        if (reqVO.getParentId() != null && !DeptDO.PARENT_ID_ROOT.equals(reqVO.getParentId())) {
+            DeptDO parentDept = randomPojo(DeptDO.class, o -> {
+                o.setId(reqVO.getParentId());
+                o.setStatus(CommonStatusEnum.ENABLE.getStatus());
+            });
+            deptMapper.insert(parentDept);
+        }
 
         // 调用
         Long deptId = deptService.createDept(reqVO);
         // 断言
         assertNotNull(deptId);
-        // 校验记录的属性是否正确
-        DeptDO deptDO = deptMapper.selectById(deptId);
-        assertPojoEquals(reqVO, deptDO, "id");
+        DeptDO dept = deptMapper.selectById(deptId);
+        assertPojoEquals(reqVO, dept, "id");
     }
 
     @Test
-    public void testUpdateDept() {
+    public void testCreateDept_parentNotExists() {
+        // 准备参数
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class,
+                o -> o.setParentId(randomLongId())); // 设置一个不存在的父部门
+
+        // 调用，断言异常
+        assertServiceException(() -> deptService.createDept(reqVO), DEPT_PARENT_NOT_EXITS);
+    }
+
+    @Test
+    public void testCreateDept_parentIsSelf() {
+        // 准备参数
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class,
+                o -> o.setId(1L).setParentId(1L)); // 设置自己为父部门
+
+        // 调用，断言异常
+        assertServiceException(() -> deptService.createDept(reqVO), DEPT_PARENT_ERROR);
+    }
+
+    @Test
+    public void testCreateDept_nameDuplicate() {
         // mock 数据
-        DeptDO dbDeptDO = randomPojo(DeptDO.class, o -> o.setStatus(randomCommonStatus()));
-        deptMapper.insert(dbDeptDO);// @Sql: 先插入出一条存在的数据
+        DeptDO dbDept = randomDeptDO();
+        deptMapper.insert(dbDept);
+        // 准备参数
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class,
+                o -> o.setParentId(dbDept.getParentId()).setName(dbDept.getName()));
+
+        // 调用，断言异常
+        assertServiceException(() -> deptService.createDept(reqVO), DEPT_NAME_DUPLICATE);
+    }
+
+    @Test
+    public void testUpdateDept_success() {
+        // mock 数据
+        DeptDO dbDept = randomDeptDO();
+        deptMapper.insert(dbDept);
         // 准备参数
         DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class, o -> {
-            // 设置更新的 ID
-            o.setParentId(DeptDO.PARENT_ID_ROOT);
-            o.setId(dbDeptDO.getId());
-            o.setStatus(randomCommonStatus());
+            o.setId(dbDept.getId());
+            o.setStatus(randomEle(CommonStatusEnum.values()).getStatus());
         });
 
         // 调用
         deptService.updateDept(reqVO);
-        // 校验是否更新正确
-        DeptDO deptDO = deptMapper.selectById(reqVO.getId()); // 获取最新的
-        assertPojoEquals(reqVO, deptDO);
+        // 断言
+        DeptDO dept = deptMapper.selectById(reqVO.getId());
+        assertPojoEquals(reqVO, dept);
+    }
+
+    @Test
+    public void testUpdateDept_notFound() {
+        // 准备参数
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class,
+                o -> o.setId(randomLongId()));
+
+        // 调用，断言异常
+        assertServiceException(() -> deptService.updateDept(reqVO), DEPT_NOT_FOUND);
+    }
+
+    @Test
+    public void testUpdateDept_parentIsChild() {
+        // mock 数据 - 创建父部门
+        DeptDO parentDept = randomDeptDO();
+        deptMapper.insert(parentDept);
+        // mock 数据 - 创建子部门
+        DeptDO childDept = randomDeptDO(o -> o.setParentId(parentDept.getId()));
+        deptMapper.insert(childDept);
+
+        // 准备参数 - 设置子部门的父部门为自己，形成循环
+        DeptSaveReqVO reqVO = randomPojo(DeptSaveReqVO.class, o -> {
+            o.setId(parentDept.getId());
+            o.setParentId(childDept.getId()); // 设置子部门为父部门，会形成循环
+        });
+
+        // 调用，断言异常
+        assertServiceException(() -> deptService.updateDept(reqVO), DEPT_PARENT_IS_CHILD);
     }
 
     @Test
     public void testDeleteDept_success() {
         // mock 数据
-        DeptDO dbDeptDO = randomPojo(DeptDO.class);
-        deptMapper.insert(dbDeptDO);// @Sql: 先插入出一条存在的数据
+        DeptDO dbDept = randomDeptDO();
+        deptMapper.insert(dbDept);
         // 准备参数
-        Long id = dbDeptDO.getId();
+        Long id = dbDept.getId();
 
         // 调用
         deptService.deleteDept(id);
-        // 校验数据不存在了
+        // 断言
         assertNull(deptMapper.selectById(id));
     }
 
     @Test
-    public void testDeleteDept_exitsChildren() {
-        // mock 数据
-        DeptDO parentDept = randomPojo(DeptDO.class);
-        deptMapper.insert(parentDept);// @Sql: 先插入出一条存在的数据
-        // 准备参数
-        DeptDO childrenDeptDO = randomPojo(DeptDO.class, o -> {
-            o.setParentId(parentDept.getId());
-            o.setStatus(randomCommonStatus());
-        });
-        // 插入子部门
-        deptMapper.insert(childrenDeptDO);
-
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.deleteDept(parentDept.getId()), DEPT_EXITS_CHILDREN);
-    }
-
-    @Test
-    public void testDeleteDeptList_success() {
-        // mock 数据
-        DeptDO deptDO1 = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO1);
-        DeptDO deptDO2 = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO2);
-        // 准备参数
-        List<Long> ids = Arrays.asList(deptDO1.getId(), deptDO2.getId());
-
-        // 调用
-        deptService.deleteDeptList(ids);
-        // 校验数据不存在了
-        assertNull(deptMapper.selectById(deptDO1.getId()));
-        assertNull(deptMapper.selectById(deptDO2.getId()));
-    }
-
-    @Test
-    public void testDeleteDeptList_exitsChildren() {
-        // mock 数据
-        DeptDO parentDept = randomPojo(DeptDO.class);
-        deptMapper.insert(parentDept);
-        DeptDO childrenDeptDO = randomPojo(DeptDO.class, o -> {
-            o.setParentId(parentDept.getId());
-            o.setStatus(randomCommonStatus());
-        });
-        deptMapper.insert(childrenDeptDO);
-        DeptDO anotherDept = randomPojo(DeptDO.class);
-        deptMapper.insert(anotherDept);
-
-        // 准备参数（包含有子部门的 parentDept）
-        List<Long> ids = Arrays.asList(parentDept.getId(), anotherDept.getId());
-
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.deleteDeptList(ids), DEPT_EXITS_CHILDREN);
-    }
-
-    @Test
-    public void testValidateParentDept_parentError() {
+    public void testDeleteDept_notFound() {
         // 准备参数
         Long id = randomLongId();
 
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.validateParentDept(id, id),
-                DEPT_PARENT_ERROR);
+        // 调用，断言异常
+        assertServiceException(() -> deptService.deleteDept(id), DEPT_NOT_FOUND);
     }
 
     @Test
-    public void testValidateParentDept_parentIsChild() {
-        // mock 数据（父节点）
-        DeptDO parentDept = randomPojo(DeptDO.class);
+    public void testDeleteDept_hasChildren() {
+        // mock 数据 - 父部门
+        DeptDO parentDept = randomDeptDO();
         deptMapper.insert(parentDept);
-        // mock 数据（子节点）
-        DeptDO childDept = randomPojo(DeptDO.class, o -> {
-            o.setParentId(parentDept.getId());
-        });
+        // mock 数据 - 子部门
+        DeptDO childDept = randomDeptDO(o -> o.setParentId(parentDept.getId()));
         deptMapper.insert(childDept);
-
         // 准备参数
         Long id = parentDept.getId();
-        Long parentId = childDept.getId();
 
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.validateParentDept(id, parentId), DEPT_PARENT_IS_CHILD);
-    }
-
-    @Test
-    public void testValidateNameUnique_duplicate() {
-        // mock 数据
-        DeptDO deptDO = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO);
-
-        // 准备参数
-        Long id = randomLongId();
-        Long parentId = deptDO.getParentId();
-        String name = deptDO.getName();
-
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.validateDeptNameUnique(id, parentId, name),
-                DEPT_NAME_DUPLICATE);
+        // 调用，断言异常
+        assertServiceException(() -> deptService.deleteDept(id), DEPT_EXITS_CHILDREN);
     }
 
     @Test
     public void testGetDept() {
         // mock 数据
-        DeptDO deptDO = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO);
+        DeptDO dbDept = randomDeptDO();
+        deptMapper.insert(dbDept);
         // 准备参数
-        Long id = deptDO.getId();
+        Long id = dbDept.getId();
 
         // 调用
-        DeptDO dbDept = deptService.getDept(id);
+        DeptDO dept = deptService.getDept(id);
         // 断言
-        assertEquals(deptDO, dbDept);
+        assertPojoEquals(dbDept, dept);
     }
 
     @Test
-    public void testGetDeptList_ids() {
+    public void testGetDeptList() {
         // mock 数据
-        DeptDO deptDO01 = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO01);
-        DeptDO deptDO02 = randomPojo(DeptDO.class);
-        deptMapper.insert(deptDO02);
+        DeptDO dept1 = randomDeptDO();
+        deptMapper.insert(dept1);
+        DeptDO dept2 = randomDeptDO();
+        deptMapper.insert(dept2);
         // 准备参数
-        List<Long> ids = Arrays.asList(deptDO01.getId(), deptDO02.getId());
+        Collection<Long> ids = List.of(dept1.getId(), dept2.getId());
 
         // 调用
-        List<DeptDO> deptDOList = deptService.getDeptList(ids);
+        List<DeptDO> list = deptService.getDeptList(ids);
         // 断言
-        assertEquals(2, deptDOList.size());
-        assertEquals(deptDO01, deptDOList.get(0));
-        assertEquals(deptDO02, deptDOList.get(1));
-    }
-
-    @Test
-    public void testGetDeptList_reqVO() {
-        // mock 数据
-        DeptDO dept = randomPojo(DeptDO.class, o -> { // 等会查询到
-            o.setName("开发部");
-            o.setStatus(CommonStatusEnum.ENABLE.getStatus());
-        });
-        deptMapper.insert(dept);
-        // 测试 name 不匹配
-        deptMapper.insert(ObjectUtils.cloneIgnoreId(dept, o -> o.setName("发")));
-        // 测试 status 不匹配
-        deptMapper.insert(ObjectUtils.cloneIgnoreId(dept, o -> o.setStatus(CommonStatusEnum.DISABLE.getStatus())));
-        // 准备参数
-        DeptListReqVO reqVO = new DeptListReqVO();
-        reqVO.setName("开");
-        reqVO.setStatus(CommonStatusEnum.ENABLE.getStatus());
-
-        // 调用
-        List<DeptDO> sysDeptDOS = deptService.getDeptList(reqVO);
-        // 断言
-        assertEquals(1, sysDeptDOS.size());
-        assertPojoEquals(dept, sysDeptDOS.get(0));
+        assertEquals(2, list.size());
     }
 
     @Test
     public void testGetChildDeptList() {
-        // mock 数据（1 级别子节点）
-        DeptDO dept1 = randomPojo(DeptDO.class, o -> o.setName("1"));
-        deptMapper.insert(dept1);
-        DeptDO dept2 = randomPojo(DeptDO.class, o -> o.setName("2"));
-        deptMapper.insert(dept2);
-        // mock 数据（2 级子节点）
-        DeptDO dept1a = randomPojo(DeptDO.class, o -> o.setName("1-a").setParentId(dept1.getId()));
-        deptMapper.insert(dept1a);
-        DeptDO dept2a = randomPojo(DeptDO.class, o -> o.setName("2-a").setParentId(dept2.getId()));
-        deptMapper.insert(dept2a);
+        // mock 数据 - 父部门
+        DeptDO parentDept = randomDeptDO();
+        deptMapper.insert(parentDept);
+        // mock 数据 - 子部门
+        DeptDO childDept = randomDeptDO(o -> o.setParentId(parentDept.getId()));
+        deptMapper.insert(childDept);
+        // mock 数据 - 孙子部门
+        DeptDO grandchildDept = randomDeptDO(o -> o.setParentId(childDept.getId()));
+        deptMapper.insert(grandchildDept);
         // 准备参数
-        Long id = dept1.getParentId();
+        Collection<Long> ids = List.of(parentDept.getId());
 
         // 调用
-        List<DeptDO> result = deptService.getChildDeptList(id);
+        List<DeptDO> children = deptService.getChildDeptList(ids);
         // 断言
-        assertEquals(result.size(), 2);
-        assertPojoEquals(dept1, result.get(0));
-        assertPojoEquals(dept1a, result.get(1));
+        assertEquals(2, children.size());
     }
 
     @Test
-    public void testGetChildDeptListFromCache() {
-        // mock 数据（1 级别子节点）
-        DeptDO dept1 = randomPojo(DeptDO.class, o -> o.setName("1"));
-        deptMapper.insert(dept1);
-        DeptDO dept2 = randomPojo(DeptDO.class, o -> o.setName("2"));
-        deptMapper.insert(dept2);
-        // mock 数据（2 级子节点）
-        DeptDO dept1a = randomPojo(DeptDO.class, o -> o.setName("1-a").setParentId(dept1.getId()));
-        deptMapper.insert(dept1a);
-        DeptDO dept2a = randomPojo(DeptDO.class, o -> o.setName("2-a").setParentId(dept2.getId()));
-        deptMapper.insert(dept2a);
+    public void testGetChildDeptIdListFromCache() {
+        // mock 数据 - 父部门
+        DeptDO parentDept = randomDeptDO();
+        deptMapper.insert(parentDept);
+        // mock 数据 - 子部门
+        DeptDO childDept = randomDeptDO(o -> o.setParentId(parentDept.getId()));
+        deptMapper.insert(childDept);
         // 准备参数
-        Long id = dept1.getParentId();
+        Long id = parentDept.getId();
+        // mock redis
+        when(redisTemplate.opsForValue()).thenReturn(valueOperations);
+        when(valueOperations.get(anyString())).thenReturn(null);
 
         // 调用
-        Set<Long> result = deptService.getChildDeptIdListFromCache(id);
+        Set<Long> childIds = deptService.getChildDeptIdListFromCache(id);
         // 断言
-        assertEquals(result.size(), 2);
-        assertTrue(result.contains(dept1.getId()));
-        assertTrue(result.contains(dept1a.getId()));
+        assertTrue(childIds.contains(childDept.getId()));
     }
 
     @Test
     public void testValidateDeptList_success() {
         // mock 数据
-        DeptDO deptDO = randomPojo(DeptDO.class).setStatus(CommonStatusEnum.ENABLE.getStatus());
-        deptMapper.insert(deptDO);
+        DeptDO dbDept = randomDeptDO(o -> o.setStatus(CommonStatusEnum.ENABLE.getStatus()));
+        deptMapper.insert(dbDept);
         // 准备参数
-        List<Long> ids = singletonList(deptDO.getId());
+        Collection<Long> ids = List.of(dbDept.getId());
 
-        // 调用，无需断言
+        // 调用，不会抛异常
         deptService.validateDeptList(ids);
     }
 
     @Test
     public void testValidateDeptList_notFound() {
         // 准备参数
-        List<Long> ids = singletonList(randomLongId());
+        Collection<Long> ids = List.of(randomLongId());
 
-        // 调用, 并断言异常
+        // 调用，断言异常
         assertServiceException(() -> deptService.validateDeptList(ids), DEPT_NOT_FOUND);
     }
 
     @Test
     public void testValidateDeptList_notEnable() {
         // mock 数据
-        DeptDO deptDO = randomPojo(DeptDO.class).setStatus(CommonStatusEnum.DISABLE.getStatus());
-        deptMapper.insert(deptDO);
+        DeptDO dbDept = randomDeptDO(o -> o.setStatus(CommonStatusEnum.DISABLE.getStatus()));
+        deptMapper.insert(dbDept);
         // 准备参数
-        List<Long> ids = singletonList(deptDO.getId());
+        Collection<Long> ids = List.of(dbDept.getId());
 
-        // 调用, 并断言异常
-        assertServiceException(() -> deptService.validateDeptList(ids), DEPT_NOT_ENABLE, deptDO.getName());
+        // 调用，断言异常
+        assertServiceException(() -> deptService.validateDeptList(ids), DEPT_NOT_ENABLE, dbDept.getName());
     }
 
+    // ========== 随机对象 ==========
+
+    @SafeVarargs
+    private static DeptDO randomDeptDO(Consumer<DeptDO>... consumers) {
+        Consumer<DeptDO> consumer = (o) -> {
+            o.setParentId(DeptDO.PARENT_ID_ROOT); // 默认父部门为根
+            o.setStatus(randomEle(CommonStatusEnum.values()).getStatus());
+        };
+        return randomPojo(DeptDO.class, ArrayUtils.append(consumer, consumers));
+    }
 }
